Mouza compliance pour le nom des chapitres

--- a/latex/master.tex
+++ b/latex/master.tex
@@ -49,13 +49,13 @@ pdfpagemode= UseOutlines,
 \fancypagestyle{plain}{
 \fancyhf[]{}
 }
-
 \title{Refactoring IzPack}
 \author{Anthonin Bonnefoy, David Duponchel}
 \lstset{language=Java}
 \begin{document}
-
+\renewcommand{\chaptername}{Partie}
 \renewcommand{\headrulewidth}{0pt}
+\makeatother
 %---------------------------------------
 \input{titlepage}
 %---------------------------------------
