--- a/latex/partie3.tex
+++ b/latex/partie3.tex
@@ -126,7 +126,7 @@ Dès lors, la manipulation des voisins, enfants, etc doit être adapté.
 Dans ce morceau de xml, nanoXML comptera 1 enfant à l'élément \verb|root| : \verb|noeud1|.
 DOM comptera 3 noeuds : du texte (le retour à la ligne et la tabulation), \verb|noeud1| et à nouveau du texte (un retour à la ligne).
 
-DOM possède néanmoins une interface dérivant de \verb|Node| : \verb|Element|, qui est trés similaire à la classe \verb|XMLElement| de nanoXML.
+DOM possède néanmoins une interface dérivant de \verb|Node| : \verb|Element|, qui est très similaire à la classe \verb|XMLElement| de nanoXML.
 \subsubsection{Contenu textuel du noeud}
 NanoXml propose une méthode pour récupérer le contenu textuel d'un noeud : \verb|getContent()|.
 DOM propose une méthode semblant équivalente : \verb|getNodeValue()|.
