--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -7,14 +7,14 @@
 \vfill
 \begin{minipage}{0.5\textwidth}
 \begin{flushleft} \large
-\emph{Auteurs:}Anthonin \textsc{Bonnefoy}\\
-~~~~~~~~~~~~~~~David \textsc{Duponchel}\\
+\emph{Auteurs: }Anthonin \textsc{Bonnefoy}\\
+~~~~~~~~~~~~~~~~David \textsc{Duponchel}\\
 \end{flushleft}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
 \begin{flushright}
 \large
-\emph{Encadres par:}Julien \textsc{Ponge}\\
+\emph{Encadrés par: }Julien \textsc{Ponge}\\
 {\today}
 \end{flushright}
 \end{minipage}\\[1cm]
