corrections + logo sur la première page

--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -1,17 +1,17 @@
 Pour diriger et faciliter l'évolution du projet, un certain nombre d'outils et de méthodes ont été mis en place au début du projet.
-L'environnement avait pour but de permettre un développement agile. 
+L'environnement avait pour but de permettre un développement agile.
 On peut distinguer 3 parties, la gestion du projet, la gestion des sources et les outils de développements.
 \section{Planification et gestion de projet}
 La méthode agile préconise des itérations courtes avec des objectifs clairs et concis à réaliser à chaque itération.
 A chaque itération, un point est fait avec le client pour définir les objectifs pour la prochaine itération, le client ici étant notre tuteur, Julien Ponge.
-Nous avons utilisé un outil pour gérer ces objectifs et ces itérations. Il s'agit est LightHouse.
+Nous avons utilisé un outil pour gérer ces objectifs et ces itérations, il s'agit de LightHouse.
 \subsection{Lighthouse}
 Lighthouse est un gestionnaire de projet en ligne.
 Il se présente sous la forme d'une application web et propose toutes les fonctionnalités nécessaires à la gestions des objectifs.
 On peut distinguer deux entités principales, les tickets et les sprints.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.4\textwidth]{../image/lighthouse.png}
+	\includegraphics[width=0.6\textwidth]{../image/lighthouse.png}
 	\caption{Page d'accueil de Lighthouse}
 \end{figure}
 \subsection{Ticket}
@@ -27,7 +27,7 @@ Ce ticket peut ensuite être assigner à une personne et possède plusieurs éta
 
 Chacun de ces tickets peut être assigné à un sprint.
 \subsection{Sprint}
-Un sprint est un ensemble de tickets à résoudre pour une date donnée. 
+Un sprint est un ensemble de tickets à résoudre pour une date donnée.
 Il correspond à une itération dans la méthodologie agile.
 Pour le projet, la durée d'un sprint était généralement de 1 ou 2 semaines.
 A chaque fin de sprint, une réunion était organisée pour discuter des résultats, des reports à effectuer ou des objectifs à réaliser pour le prochains sprint.
@@ -47,7 +47,7 @@ Le dépôt de référence d'IzPack est un dépôt Subversion.
 Les contributeurs appliquent leurs modifications sur ce dépôt.
 Cependant, pour des raisons de facilité et pour ne pas perturber le développement, il a été décidé de travailler sur un fork Git plutôt que sur le dépôt subversion.
 \subsection{Git}
-Git est un gestionnaire de version récent. Il a été crée en 2004 par Linus Torvald pour remplacer BitKeeper, l'ancien gestionnaire de version du noyau linux.
+Git est un gestionnaire de version récent. Il a été créé en 2004 par Linus Torvald pour remplacer BitKeeper, l'ancien gestionnaire de version du noyau linux.
 Il s'agit, à l'instar de BitKeeper, d'un système distribué.
 Toutes les copies du dépôt sont elles-mêmes des serveurs.
 Chaque personne travaille donc sur son propre dépôt et se synchronise par rapport à d'autres dépôts.
