--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -3,17 +3,17 @@
 IzPack est un projet open-source crée en 2001 par Julien Ponge. C'est un générateur d'installeur et il présente à ce titre de nombreuses fonctionnalités.
 \subsection{Générateur d'installeur}
 Une application, une fois réalisée, nécessite un certain nombre d'operations sur la machine pour être operationnelle.
-Ces operations vont de la décompression de l'archive dans un répertoire au lancement de scripts de configuration en passant par la validation de la licence et la création de raccourcis.
+Ces opérations vont de la décompression de l'archive dans un répertoire au lancement de scripts de configuration en passant par la validation de la licence et la création de raccourcis.
 Créer un installeur pour une application est souvent laborieux et n'apporte que peu de plus-value au programme. 
 
 L'intérêt d'Izpack réside dans le fait qu'il propose une solution pour créer cet installeur de manière simple et universelle.
 En effet, à partir d'une application existante, Izpack est capable de générer un installateur pour cette apllication. Cet installateur pourra être utilisé pour déployer l'application sur n'importe quelle machine.
 De plus, tout type de programme peut être packagé, que ce soit une application C++ ou Java. Izpack se chargeant juste de la logique d'installation, il est totalement independant du contenu qu'il installe.
 \subsection{Open-source}
-Le projet Izpack est placée sous une licence Open-source. A ce titre, le code source est librement accessible selon les termes de la licence. De plus, une communauté s'est regroupée autour du projet.
+Le projet Izpack est placé sous une licence Open-source. A ce titre, le code source est librement accessible selon les termes de la licence. De plus, une communauté s'est regroupée autour du projet.
 \subsubsection{Licence}
 Izpack est sous licence Apache 2. Cette licence permet l'accès au code source et l'utilisation libre du logiciel.
-Il est tout à fait possible de l'utiliser pour une application commerciale voire même, de modifier les sources pour le faire correspondre à ses besoins.
+Il est tout à fait possible de l'utiliser pour une application commerciale, voire même de modifier les sources pour le faire correspondre à ses besoins.
 
 Une importante communauté s'est regroupée autour de ce projet ce qui a permis son évolution jusqu'à maintenant.
 Si un développeur apporte des modifications utiles, il est encouragé à en faire profiter la communauté, mais ce n'est pas une obligation.
@@ -27,11 +27,21 @@ Izpack est un système modulaire, il possède de nombreuses fonctionnalités pou
 \subsubsection{Multi-plateforme}
 L'installeur généré par Izpack est un jar (java archive).
 Il suffit donc que la machine ait un machine virtuelle pour pouvoir lancer l'installation, indépendamment de la plateforme ou du système d'exploitation.
-Il est néanmoins possible de faire des traitements spécifiques à certaines plateformes ou de convertir l'installeur pour être spécifique a une plateforme.
+Il est néanmoins possible de faire des traitements spécifiques à certaines plateformes ou de convertir l'installeur pour être spécifique à une plateforme.
 \subsubsection{Personnalisation}
 Chaque écran que verra l'utilisateur est décrit par un panel.
 Izpack propose un ensemble de panels qui vont constituer l'installateur graphique.
 Chaque panels remplit une fonction spécifique. L'aspect global de l'installeur et celui des panels est personnalisable par l'utilisateur via le descripteur XML.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.3\textwidth]{../dia/included/install/02.png}
+	\includegraphics[width=0.3\textwidth]{../dia/included/install/05.png}
+	\includegraphics[width=0.3\textwidth]{../dia/included/install/06.png}
+	\caption{Exemple de panels disponibles avec IzPack}
+\end{figure}
+Il existe de nombreux types de panels : des panel pour accueillir l'utilisateur et lui afficher des informations (HelloPanel et HTMLInfoPanel), d'autres pour demander à l'utilisateur des informations (UserInputPanel), etc...
+Il existe aussi des panels plus spécialisés. Ainsi, CompilePanel permet de compiler du code java et ProcessPanel permet de lancer des programmes après l'installation.
+
 \subsubsection{Internationalisation}
 Izpack supporte la création d'installeur multilangues. Pour la localisation, tout repose sur des fichiers XML.
 Si une langue n'existe pas, il suffit de traduire le dictionnaire correspondant dans un fichier xml et de l'utiliser lors de la création de l'installeur.
@@ -72,23 +82,18 @@ Dans un premier temps, le compilateur va compiler l'application.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../image/partie_compil.png}
+	\includegraphics[width=\textwidth]{../image/partie_compil.png}
 	\caption{Phase de compilation}
 \end{figure}
 L'installateur généré comprend l'application en elle-même et toute la partie installation nécessaire et adaptée aux besoins de l'application.
 Cette application est alors prête à être déployée sur une autre machine.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../image/partie_install.png}
+	\includegraphics[width=\textwidth]{../image/partie_install.png}
 	\caption{Phase d'installation}
 \end{figure}
 Le processus d'installation est géré par la partie installeur de Izpack. Cette phase va permettre de déployer l'application sur toutes les machines nécessaires.
 
-\subsubsection{Exemples de panels}
-Il existe de nombreux types de panels : des panel pour accueillir l'utilisateur et lui afficher des informations (HelloPanel et HTMLInfoPanel), d'autres pour demander à l'utilisateur des informations (UserInputPanel), etc...
-Il existe aussi des panels plus spécialisés. Ainsi, CompilePanel permet de compiler du code java et ProcessPanel permet de lancer des programmes après l'installation.
-
-% screenshot de panels si on a du temps / de la place
 %---------------------------------------------------------
 \section{Exemples d'installation}
 Des exemples complets existent, par exemple l'installeur de IzPack, de Glassfish, de PerfSonar... 
