--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -57,8 +57,8 @@ Il peut effectuer toutes les operations voulues sur son dépôt en étant décon
 Ainsi, n'importe quel développeur a accès à toutes les fonctionnalités d'un gestionnaire de version même s'il n'est pas connecté au dépôt central.
 La communication entre dépôts Git se fait soit par le protocole ssh, https, ftp, rsync ou par le protocole git.
 
-Git se démarque également sur des fonctionnalités évoluées. 
-L'un de ses principaux points forts est la gestion des branches. 
+Git se démarque également sur des fonctionnalités évoluées.
+L'un de ses principaux points forts est la gestion des branches.
 La création, suppression et fusion des branches est remarquable de simplicité et d'efficacité.
 La taille d'un dépôt Git est faible comparée à celle d'autres gestionnaires comme subversion.
 
@@ -67,12 +67,12 @@ Nous avons travaillé sur un fork de ce dépôt.
 Nous pouvions à tout moment synchroniser notre dépôt par rapport au dépôt d'origine et ainsi, appliquer toutes les modifications des contributeurs à notre dépôt.
 Cela permettait de préparer l'application de nos modifications de manière aisée. Tout ces dépôts sont hébergés sur GitHub.
 \subsection{GitHub}
-GitHub est une plateforme collaborative hébergeant des dépôts Git. 
+GitHub est une plateforme collaborative hébergeant des dépôts Git.
 Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
 Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de consulter, cloner ou de forker les projets présents sur GitHub.
 Le droit de commit est cependant restreint aux utilisateurs choisies.
-Cette plateforme a été choisi par Julien Ponge pour héberger son dépôt Git. 
-Nous nous sommes donc créés des comptes sur GitHub et l'avons forké. 
+Cette plateforme a été choisi par Julien Ponge pour héberger son dépôt Git.
+Nous nous sommes donc créés des comptes sur GitHub et l'avons forké.
 L'utilisation d'un dépôt public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
 %- GitHub : Gestionnaire de dépôt Git
 %-> Duplicat (fork) du projet
@@ -87,9 +87,9 @@ L'utilisation d'un dépôt public basé sur celui de Julien Ponge a permis non s
 %-> Preserve Case
 %-> Refactoring puissant
 IntelliJ est un environnement de développement intégré similaire à Eclipse.
-Il est propriétaire et nécessite une licence pour son fonctionnement. 
+Il est propriétaire et nécessite une licence pour son fonctionnement.
 Cependant, JetBrain, l'éditeur de IntelliJ, a une politique d'ouverture pour les projets open-source.
-Les projets sous CodeHaus et Apache bénéficient d'une licence dédiée et gratuite. 
+Les projets sous CodeHaus et Apache bénéficient d'une licence dédiée et gratuite.
 
 Il présente certaines divergences avec des IDE comme Eclipse et NetBeans.
 Il possède une plus grande variété de fonctionnalités et l'intégration d'un grand nombre de composants.
@@ -102,5 +102,4 @@ De plus, ses capacités de modification de code (refactoring) sont au dessus de 
 %-> Affichage de la charge a tout moment
 Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programmes. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
 
-Le but du profiling a été de repérer les optimisations possibles sur les modifications que l'on a opérées.
-%TODO Faire des snapshots yourkit
+Le but du profiling a été de repérer les optimisations possibles sur les modifications que l'on a opéré.
