--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -2,8 +2,8 @@
 \section{Description}
 IzPack est un projet open-source crée en 2001 par Julien Ponge. C'est un générateur d'installeur et il présente à ce titre de nombreuses fonctionnalités.
 \subsection{Générateur d'installeur}
-Une application, une fois réalisée, nécessite un certain nombre d'operations sur la machine pour être operationnelle.
-Ces operations vont de la décompression de l'archive dans un répertoire au lancement de scripts de configuration en passant par la validation de la licence et la création de raccourcis.
+Une application, une fois réalisée, nécessite un certain nombre d'opérations sur la machine pour être opérationnelle.
+Ces opérations vont de la décompression de l'archive dans un répertoire au lancement de scripts de configuration en passant par la validation de la licence et la création de raccourcis.
 Créer un installeur pour une application est souvent laborieux et n'apporte que peu de plus-value au programme. 
 
 L'intérêt d'Izpack réside dans le fait qu'il propose une solution pour créer cet installeur de manière simple et universelle.
