--- a/latex/titlepage.tex
+++ b/latex/titlepage.tex
@@ -1,17 +1,17 @@
 \begin{titlepage}
-\begin{minipage}{0.25\textwidth}
+\begin{minipage}{0.4\textwidth}
 \begin{flushleft}
-\includegraphics[width=100px]{../image/logoISIMA.png}\\
-\textsc{\large Institut Supérieur d'Informatique, de Modélisation et de leurs Applications}\\[0.5cm]
+\includegraphics[width=0.8\textwidth]{../image/logoISIMA.png}\\
+\textsc{Institut Supérieur d'Informatique, de Modélisation et de leurs Applications}\\[0.5cm]
 Complexe des Cézeaux\\
 BP 125\\
 63173 Aubière Cedex
 \end{flushleft}
 \end{minipage}
 \hfill
-\begin{minipage}{0.50\textwidth}
+\begin{minipage}{0.4\textwidth}
 \begin{flushright} 
-\includegraphics[width=200px]{../image/izpack-logo-big.png}\\
+\includegraphics[width=1\textwidth]{../image/izpack-logo-big.png}\\
 %\textsc{\large Projet IzPack}\\[0.5cm]
 % TODO indiquer des coordonnées ?!
 \end{flushright}
