Double de la titlepage

--- a/latex/master.tex
+++ b/latex/master.tex
@@ -58,6 +58,7 @@ pdfpagemode= UseOutlines,
 \makeatother
 %---------------------------------------
 \input{titlepage}
+\input{titlepage}
 %---------------------------------------
 \chapter*{Remerciements}
 \input{remerciement}
