--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -17,14 +17,13 @@ On peut distinguer deux entités principales, les tickets et les sprints.
 \subsection{Ticket}
 Les Tickets représentent un objectif à réaliser.
 Ils peuvent être crées par n'importe quel participant au projet. 
-Ce ticket peut ensuite être assigner à une personne et possède plusieurs états.
-\begin{itemize}
-\item Nouveau
-\item Ouvert
-\item Résolu
-\item Clos
-\end{itemize}
-
+Ce ticket peut ensuite être assigner à une personne et possède plusieurs états comme vu sur la figure~\ref{fig:workflow}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.2\textwidth]{../image/lighthouseWorkFlow.png}
+	\caption{Workflow LightHouse}
+\label{fig:workflow}
+\end{figure}
 Chacun de ces tickets peut être assigné à un sprint.
 \subsection{Sprint}
 Un sprint est un ensemble de tickets à résoudre pour une date donnée.
